# EntityEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  compile_commands.json
docs/: 01_COMO_FUNCIONA_UN_MOTOR.md  02_DOCUMENTACION_PROYECTO.md  03_PLAN_DE_ACCION.md  04_GUIA_INPUT_ACTIONS_MAPPINGS.md  05_GUIA_SISTEMA_RENDERIZADO.md
engine/: CMakeLists.txt
engine/include/Core/: Application.h  Game.h  Time.h  log.h
engine/include/Platform/: Input.h  InputCodes.h  InputMap.h  Window.h
engine/include/Render/: IRenderer2D.h
engine/include/Render/Backend/: SDLRenderer2D.h
engine/include/Resources/: ResourceManager.h
engine/src/Core/: Application.cpp  Time.cpp  log.cpp
engine/src/Platform/: Input.cpp  InputMap.cpp  SDLWindow.cpp
engine/src/Render/: SDLRenderer2D.cpp  SDLRenderer2D.h
engine/src/Resources/: ResourceManager.cpp
game/: CMakeLists.txt
game/src/: main.cpp
